<resources>
    <string name="app_name">Cristagram</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Don\'t have an account? Sign Up</string>
    <string name="wait">Please, wait...</string>
    <string name="fields_required">All fields are required!</string>
    <string name="authentication_failed">Authantication failed!</string>
    <string name="full_name">Full Name</string>
    <string name="already_account">Already have an account? Log In</string>
    <string name="logo">Cristagram logo</string>
    <string name="password_length">Password must have 6 charecters </string>
    <string name="no_register">You can\'t register with this email or password</string>
    <string name="add_story">Add story</string>
    <string name="my_story">My Story</string>
    <string name="search">Search...</string>
    <string name="start_follow">started following you</string>
    <string name="wrong">Something went wrong!</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="bio">Bio</string>
    <string name="change_photo">Change Photo</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="likes">likes</string>
    <string name="add_comment">Add a comment...</string>
    <string name="post">POST</string>
    <string name="comments">Comments</string>
    <string name="view_all">View All </string>
    <string name="photo">Photo</string>
</resources>